# Orm

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
include/orm/: connection.hpp  constants.hpp  exceptions.hpp  table.hpp
include/orm/statements/: aggregate_function_statement.hpp  all.hpp  case_statement.hpp  comparison_operator.hpp  conditional_statement.hpp  else_statement.hpp  end_statement.hpp  field.hpp  field_statement.hpp  function_statement.hpp  group_by_statement.hpp  group_statement.hpp  insert_statement.hpp  join_statement.hpp  limit_statement.hpp  literal_statement.hpp  node.hpp  offset_statement.hpp  on_statement.hpp  order_statement.hpp  select_statement.hpp  statement.hpp  then_statement.hpp  update_statement.hpp  when_statement.hpp  where_statement.hpp
